Fixed min height on iOS

--- a/src/style.css
+++ b/src/style.css
@@ -9,9 +9,12 @@
   --hover-color: rgb(200, 200, 200);
 }
 
+html {
+}
 body {
   background-color: var(--tertiary-color);
   min-height: 100vh;
+
   color: var(--primary-color);
 }
 
@@ -20,6 +23,16 @@ body {
   flex-direction: column;
   min-height: 100vh;
   justify-content: flex-start;
+}
+
+@supports (-webkit-touch-callout: none) {
+  body {
+    min-height: -webkit-fill-available;
+  }
+
+  .container {
+    min-height: -webkit-fill-available;
+  }
 }
 .logo-section {
   background-color: var(--primary-color);
